# rl-projects

./: .gitignore  main.py  pyproject.toml  test.ipynb
algos/basic/: policy_evaluation.py  policy_improvement.py  policy_iteration.py  utils.py
rl_projects/: bandits.ipynb
rl_projects/bandits/: bandits.ipynb
rl_projects/basic/: policy_evaluation.py  policy_improvement.py  policy_iteration.py  value_iteration.py
rl_projects/drl/: dqn.py  nfq.py  utils.py
rl_projects/envs/: cartpole.py  frozen_lake.py  mab.py
rl_projects/mab/: strategies.py
rl_projects/model_free_methods/: control_algorithms.py  monte_carlo_evaluation.py  planning.py  q_learning.py  temporal_difference_evaluation.py  utils.py
rl_projects/sampling/: monte_carlo.py  temporal_difference.py  utils.py
