[project]
name = "rl-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch[gpu]>=2.6.0",
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
gpu = [
  "torch",
  "torchvision",
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", marker = "extra == 'cpu' and extra != 'gpu'" },
  { index = "torch-gpu", marker = "extra == 'gpu'" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu126"
